--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+.visually-hidden {
+  display: none;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -39,7 +43,8 @@ img {
 .headerlink:active {
   color: #404bbf;
 }
-.logo {
+.logo,
+.footerlogo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   font-size: 18px;
@@ -56,25 +61,44 @@ img {
 }
 .logolink:hover,
 .web:hover,
-.logo:hover {
+.logo:hover,
+.footerlogo:hover {
   color: #404bbf;
 }
 .logolink:active,
 .web:active,
-.logo:active {
+.logo:active,
+.footerlogo:active {
   color: #404bbf;
 }
 .logolink:focus,
 .web:focus,
-.logo:focus {
+.logo:focus,
+.footerlogo:focus {
   color: #404bbf;
 }
 
 .logolink {
   color: #f4f4fd;
 }
-header {
+.header {
   background: var(--WHITE, #fff);
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.headercontainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+}
+.navigationlist {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .address {
   font-style: normal;
@@ -93,6 +117,8 @@ header {
 }
 .esolution {
   background: var(--NAVY-BLUE, #2e2f42);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .mainheader {
   color: var(--WHITE, #fff);
@@ -101,6 +127,9 @@ header {
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .orderbutton {
   cursor: pointer;
@@ -111,8 +140,14 @@ header {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
   margin-top: 48px;
-  padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .orderbutton:hover {
   background-color: #404bbf;
@@ -120,7 +155,20 @@ header {
 .orderbutton:focus {
   background-color: #404bbf;
 }
-
+.strategy {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.strategylist {
+  display: flex;
+  gap: 24px;
+}
+.strategy-container {
+  display: flex;
+}
+.strategylistitem {
+  width: calc((100%-3 * 24px) / 4);
+}
 .strategyheader {
   color: var(--NAVY-BLUE, #2e2f42);
   margin-bottom: 8px;
@@ -156,19 +204,28 @@ header {
 }
 .teamitem {
   background: var(--WHITE, #fff);
-  margin-top: 32px;
-  padding-bottom: 32px;
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+.teamlist {
+  display: flex;
+  gap: 24px;
+}
+.teamworkercontainer {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .teamparagraf {
   color: var(--SLATE, #434455);
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 .teamheader {
   color: var(--NAVY-BLUE, #2e2f42);
@@ -177,6 +234,8 @@ header {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .portfolio {
   padding-top: 120px;
@@ -196,15 +255,26 @@ header {
 .portfoliolistitem {
   background: var(--WHITE, #fff);
   padding-bottom: 32px;
-  border: 1px solid var(--CORNFLOWER, #e7e9fc);
+  width: calc((100% - 48px) / 3);
 }
 .portfolioheader {
   color: var(--NAVY-BLUE, #2e2f42);
-  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.portfoliolist {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfoliocontainer {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .portfolioparagraf {
   color: var(--SLATE, #434455);
@@ -215,13 +285,12 @@ header {
   letter-spacing: 0.02em;
 }
 .footer {
-  padding-top: 101.5px;
+  padding-top: 100px;
   padding-bottom: 100px;
   background: var(--NAVY-BLUE, #2e2f42);
 }
 .footerparagraf {
   color: var(--CLOUD, #f4f4fd);
-  margin-top: 17.5px;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
@@ -229,45 +298,12 @@ header {
   letter-spacing: 0.02em;
   width: 264px;
 }
+.footerlogo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
 .container {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-}
-.navigation {
-  display: flex;
-}
-.solution-container {
-  padding-top: 188px;
-  padding-bottom: 188px;
-}
-.strategy-container {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  display: flex;
-}
-.navigationlist {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-.headercontainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.hydenheader {
-  display: none;
-}
-.strategylist {
-  display: flex;
-}
-.teamlist {
-  display: flex;
-  gap: 24px;
-}
-.portfoliolist {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
 }
