--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,17 @@ p {
   margin-bottom: 0;
 }
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 img {
@@ -167,7 +177,7 @@ img {
   display: flex;
 }
 .strategylistitem {
-  width: calc((100%-3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .strategyheader {
   color: var(--NAVY-BLUE, #2e2f42);
