--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ img {
 .headerlink:active {
   color: #404bbf;
 }
-.logo,
-.footerlogo {
+.logo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   font-size: 18px;
@@ -65,6 +64,16 @@ img {
   padding-top: 25.5px;
   padding-bottom: 25.5px;
   margin-right: 76px;
+}
+.footerlogo {
+  font-family: "Raleway", sans-serif;
+  color: #4d5ae5;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 17.5px;
 }
 .web {
   color: #2e2f42;
@@ -264,7 +273,6 @@ img {
 }
 .portfoliolistitem {
   background: var(--WHITE, #fff);
-  padding-bottom: 32px;
   width: calc((100% - 48px) / 3);
 }
 .portfolioheader {
@@ -310,7 +318,6 @@ img {
 }
 .footerlogo {
   display: inline-block;
-  margin-bottom: 16px;
 }
 .container {
   max-width: 1158px;
